--- a/src/public/home.html
+++ b/src/public/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/secondStile.css" />
-    <title>Document</title>
+    <title>Home</title>
   </head>
   <body>
     <header>
@@ -13,8 +13,8 @@
         <p>Library System</p>
         <nav>
           <ul>
-            <li><a href="#">home</a></li>
-            <li><a href="datos.html">Add newcustomer </a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="datos.html">Add new customer </a></li>
             <li><a href="">Add new book</a></li>
             <li><a href="#">Loan book</a></li>
           </ul>
@@ -23,26 +23,12 @@
     </header>
 
     <div class="container">
-      <div class="container-box">
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
+      <div class="container-box" id = "container-box">
+    
       </div>
-      <div class="container-user">
-        <img src="./img/user_icon_001.jpg" alt="">
-          <ul>
-          <li>Name:</li>
-          <li>Age: </li>
-          <li>Schedule:</li>
-        </ul>       
-      </div>
+
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+   <script type="module" src="js/home.js"></script>
   </body>
 </html>
