complete page customer

--- a/src/public/home.html
+++ b/src/public/home.html
@@ -11,10 +11,11 @@
       <div class="menu">
         <img src="./img/books.png" alt="" />
         <p>Library System</p>
+
         <nav>
           <ul>
             <li><a href="#">Home</a></li>
-            <li><a href="datos.html">Add new customer </a></li>
+            <li><a href="/customerAdded">Add new customer </a></li>
             <li><a href="">Add new book</a></li>
             <li><a href="#">Loan book</a></li>
           </ul>
