--- a/src/public/createCustome.html
+++ b/src/public/createCustome.html
@@ -16,7 +16,7 @@
             <ul>
               <li><a href="/home">Home</a></li>
               <li><a href="/customerAdded">Add new customer </a></li>
-              <li><a href="">Add new book</a></li>
+              <li><a href="/bookAdded">Add new book</a></li>
               <li><a href="#">Loan book</a></li>
             </ul>
           </nav>
