--- a/src/public/home.html
+++ b/src/public/home.html
@@ -14,9 +14,9 @@
 
         <nav>
           <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="/customerAdded">Add new customer </a></li>
-            <li><a href="">Add new book</a></li>
+            <li><a href="/bookAdded">Add new book</a></li>
             <li><a href="#">Loan book</a></li>
           </ul>
         </nav>
