form Loand Book 70%

--- a/src/public/home.html
+++ b/src/public/home.html
@@ -17,7 +17,7 @@
             <li><a href="/">Home</a></li>
             <li><a href="/customerAdded">Add new customer </a></li>
             <li><a href="/bookAdded">Add new book</a></li>
-            <li><a href="#">Loan book</a></li>
+            <li><a href="/loan_book">Loan book</a></li>
           </ul>
         </nav>
       </div>
