complete form loan

--- a/src/public/loanAddPage.html
+++ b/src/public/loanAddPage.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/loanStyles.css">
+    <link rel="icon" href="../public/img/icon/books.ico" >
     <title>Loan Book</title>
 </head>
 <body>
@@ -48,7 +49,7 @@
       <div class="modal-container" id = "modal-container">
         <div class="modal">
           <h1>Ok!!</h1>
-          <p>Book added with successful</p>
+          <p>Loan accepted</p>
           <button id = "button-modal">continue</button>
         </div>
 
