--- a/src/public/bookAdd.html
+++ b/src/public/bookAdd.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/booksStile.css">
+    <link rel="icon" href="../public/img/icon/books.ico" >
     <title>Add new book</title>
 </head>
 <body>
