--- a/src/public/home.html
+++ b/src/public/home.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/secondStile.css" />
+    <link rel="icon" href="../public/img/icon/books.ico" >
+    
     <title>Home</title>
   </head>
   <body>
